# algebra-relacional

./: CHANGELOG.md  README.md  algebra-relacional.cabal  tests.txt
app/: Main.hs
data/: AlumnosA.csv  AlumnosB.csv  Inscripciones.csv  Materias.csv  Obligatorias.csv
src/Core/: AST.hs  Eval.hs  Optimizer.hs  Parser.hs  Schema.hs
src/Interface/: PPRel.hs  Repl.hs
src/Types/: Common.hs  Monads.hs  RelContext.hs
src/Utils/: LoadCSV.hs
tests/: consultas.md
